--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         android:label="background_locator_example"
         android:icon="@mipmap/ic_launcher"
         android:allowBackup="false"
+        
         >
         <activity
             android:name=".MainActivity"
@@ -28,6 +29,7 @@
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
             android:windowSoftInputMode="adjustResize"
+                 android:exported="true"
             >
             <meta-data
                 android:name="io.flutter.embedding.android.SplashScreenDrawable"
@@ -41,7 +43,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name="rekab.app.background_locator.BootBroadcastReceiver"
+        <receiver android:name="rekab.app.background_locator.BootBroadcastReceiver"      android:exported="true"
             android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
